--- a/public/tcc/css/estilo.css
+++ b/public/tcc/css/estilo.css
@@ -3,7 +3,7 @@
 	bottom: 0;
 	left: 0;
 	height: 40px;
-	position: relative; /*fixed*/
+	position: fixed; /*fixed*/
 	width: 100%;
 }
 
@@ -13,5 +13,5 @@
 }
 
 .chao {
-	margin-bottom: 50px;
+	margin-bottom: 40px;
 }
