--- a/public/tcc/css/estilo.css
+++ b/public/tcc/css/estilo.css
@@ -32,8 +32,8 @@ tr:nth-of-type(even) {
 }
 
 #table-scroll {
-  height:450px;
-  overflow:auto;
+	height:450px;
+	overflow:auto;
 }
 
 @media only screen and (max-width: 767px) {
@@ -51,5 +51,54 @@ tr:nth-of-type(even) {
 @media only screen and (max-width: 410px) {
 	table {
 		font-size: 6px;
+	}
+}
+
+@media only screen and (min-height: 500px) {
+	#table-scroll {
+		height:350px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 640px) {
+	#table-scroll {
+		height:450px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 700px) {
+	#table-scroll {
+		height:500px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 732px) {
+	#table-scroll {
+		height:550px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 800px) {
+	#table-scroll {
+		height:600px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 1020px) {
+	#table-scroll {
+		height:800px;
+		overflow:auto;
+	}
+}
+
+@media only screen and (min-height: 1250px) {
+	#table-scroll {
+		height:1150px;
+		overflow:auto;
 	}
 }
