--- a/public/tcc/css/estilo.css
+++ b/public/tcc/css/estilo.css
@@ -28,12 +28,16 @@ tr:nth-of-type(even) {
 }
 
 .chao {
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 }
 
 #table-scroll {
 	height:450px;
 	overflow:auto;
+}
+
+.grafico {
+	height: 0px;
 }
 
 @media only screen and (max-width: 1550px) {
@@ -83,6 +87,13 @@ tr:nth-of-type(even) {
 		overflow:auto;
 	}
 }
+
+@media only screen and (min-height: 657px) {
+	.grafico {
+		height: 500px;
+	}
+}
+
 
 @media only screen and (min-height: 700px) {
 	#table-scroll {
